<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002F80"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#002F80"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_username"
            android:textColor="@color/white"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="150dp"
            android:textStyle="bold"
            android:layout_marginStart="75dp" />

        <EditText
            android:id="@+id/edit_registrati"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="75dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginStart="75dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="@string/inserisci_email"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="75dp" />

        <EditText
            android:id="@+id/edit_registrati1"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="75dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            android:text=""
            android:textAlignment="center"
            android:layout_marginStart="75dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="@string/inserisci_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="75dp" />

        <EditText
            android:id="@+id/edit_registrati2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="75dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:text=""
            android:textAlignment="center"
            android:layout_marginStart="75dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="750dp"
            android:text="@string/conferma_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="75dp" />

        <EditText
            android:id="@+id/edit_registrati3"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="75dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:text=""
            android:textAlignment="center"
            android:layout_marginStart="75dp" />
        <Button
            android:id="@+id/button_login2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="155dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="20dp"
            android:text="@string/registrati"
            android:textColor="@color/white"
            app:iconTint="@color/black"
            app:rippleColor="@color/black"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp" />


    </LinearLayout>
</ScrollView>